# TaskManager

./: .gitignore  CMakeLists.txt  TaskManagerAI.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  newtaskdialog.cpp  newtaskdialog.h  newtaskdialog.ui  task.h  taskdb.cpp  taskdb.h  taskdialog.cpp  taskdialog.h  taskdialog.ui  taskwidgetitem.cpp  taskwidgetitem.h
